# ai-knowledge-base

./: .gitignore  AGENTS.md  README.md  collected_data.json  mcp_knowledge_server.py  pyproject.toml  requirements-dev.txt  requirements.txt  skills-lock.json  sub-agent-test-log.md  temp_analysis.json
.github/workflows/: daily-collect.yml
.opencode/: pnpm-lock.yaml
.opencode/agents/: analyzer.md  collector.md  organizer.md
.opencode/plugins/: validate.ts
.opencode/skills/github-trending/: SKILL.md
.opencode/skills/tech-summary/: SKILL.md
hooks/: check_quality.py  validate_json.py
knowledge/articles/2026-04/: 2026-04-20-gh-evomap-evolver.json  2026-04-20-gh-forrestchang-andrej-karpathy-skills.json  2026-04-20-gh-jamiepine-voicebox.json  2026-04-20-gh-lordog-dive-into-llms.json  2026-04-20-gh-lsdefine-genericagent.json  2026-04-20-gh-multica-ai-multica.json  2026-04-20-gh-nousresearch-hermes-agent.json  2026-04-20-gh-shiyu-coder-kronos.json  2026-04-20-gh-thedotmack-claude-mem.json  2026-04-20-gh-virattt-ai-hedge-fund.json  2026-04-23-gh-copilotkit.json  2026-04-23-gh-deer-flow.json  2026-04-23-gh-dify.json  2026-04-23-gh-everything-claude-code.json  2026-04-23-gh-gpt-researcher.json  2026-04-23-gh-haystack.json  2026-04-23-gh-jeecgboot.json  2026-04-23-gh-khoj.json  2026-04-23-gh-langflow.json  2026-04-23-gh-llamafactory.json  2026-04-23-gh-lobehub.json  2026-04-23-gh-n8n.json  2026-04-23-gh-ollama.json  2026-04-23-gh-openclaw.json  2026-04-23-gh-ragflow.json  tech-summary-2026-04-23.json
knowledge/articles_backup_20260420_220711/2026-04/: 2026-04-20-gh-evomap-evolver.json  2026-04-20-gh-forrestchang-andrej-karpathy-skills.json  2026-04-20-gh-jamiepine-voicebox.json  2026-04-20-gh-lordog-dive-into-llms.json  2026-04-20-gh-lsdefine-genericagent.json  2026-04-20-gh-multica-ai-multica.json  2026-04-20-gh-nousresearch-hermes-agent.json  2026-04-20-gh-shiyu-coder-kronos.json  2026-04-20-gh-thedotmack-claude-mem.json  2026-04-20-gh-virattt-ai-hedge-fund.json
knowledge/raw/: github-trending-2026-04-23.json
pipeline/: model_client.py  pipeline.py  rss_sources.yaml
specs/: coding-standards.md
tests/: __init__.py  test_github_api.py
utils/: github_api.py  organizer.py
